Tfp 6860 harmonisere kontrakt (#64)
* TFP-6860 harmoniserer InntektsmeldingRequest navn og felter med sykepenger