@@ -59,8 +59,9 @@ class InntektsmeldingValidererUtilTest {
     @Test
     void skal_godkjenne_svangerskapspenger_matcher() {
         var request = lagRequest(YtelseType.SVANGERSKAPSPENGER,
-            List.of(new InntektsmeldingRequest.Refusjon(STARTDATO, DEFAULT_BELØP)),
-            Collections.emptyList(), Collections.emptyList());
+            new InntektsmeldingRequest.Refusjon(DEFAULT_BELØP, List.of()),
+            Collections.emptyList(),
+            new InntektsmeldingRequest.InntektInfo(DEFAULT_BELØP,List.of()));
         var forespørsel = lagForespørsel(ForespørselStatus.UNDER_BEHANDLING, STARTDATO, YtelseType.SVANGERSKAPSPENGER);
         var result = InntektsmeldingValidererUtil.validerInntektsmeldingMotForespørsel(request, forespørsel);
         assertThat(result).isEmpty();
@@ -78,13 +79,6 @@ class InntektsmeldingValidererUtilTest {
     // =====================================================================
 
     @Test
-    void skal_avvise_refusjon_uten_startdato_i_listen() {
-        var refusjon = List.of(new InntektsmeldingRequest.Refusjon(STARTDATO.plusDays(1), DEFAULT_BELØP));
-        var result = InntektsmeldingValidererUtil.validerRefusjon(refusjon, STARTDATO);
-        assertThat(result).hasValue(EksponertFeilmelding.REFUSJON_FOM_LIK_STARTDATO);
-    }
-
-    @Test
     void skal_godkjenne_null_refusjon() {
         var result = InntektsmeldingValidererUtil.validerRefusjon(null, STARTDATO);
         assertThat(result).isEmpty();
@@ -92,17 +86,16 @@ class InntektsmeldingValidererUtilTest {
 
     @Test
     void skal_godkjenne_enkel_refusjon_med_startdato() {
-        var refusjon = List.of(new InntektsmeldingRequest.Refusjon(STARTDATO, DEFAULT_BELØP));
+        var refusjon = new InntektsmeldingRequest.Refusjon(BigDecimal.valueOf(20000), List.of());
         var result = InntektsmeldingValidererUtil.validerRefusjon(refusjon, STARTDATO);
         assertThat(result).isEmpty();
     }
 
     @Test
-    void skal_godkjenne_sammenhengende_refusjoner() {
-        var refusjon = List.of(
-            new InntektsmeldingRequest.Refusjon(STARTDATO, DEFAULT_BELØP),
-            new InntektsmeldingRequest.Refusjon(STARTDATO.plusDays(1), new BigDecimal("20000.00")),
-            new InntektsmeldingRequest.Refusjon(STARTDATO.plusDays(2), new BigDecimal("15000.00"))
+    void skal_godkjenne_sammenhengende_refusjonsendringer() {
+        var refusjon = new InntektsmeldingRequest.Refusjon(DEFAULT_BELØP, List.of(
+            new InntektsmeldingRequest.Refusjon.RefusjonEndring(BigDecimal.valueOf(20000), STARTDATO.plusDays(10)),
+            new InntektsmeldingRequest.Refusjon.RefusjonEndring(BigDecimal.valueOf(15000), STARTDATO.plusDays(20)))
         );
         var result = InntektsmeldingValidererUtil.validerRefusjon(refusjon, STARTDATO);
         assertThat(result).isEmpty();
@@ -110,20 +103,29 @@ class InntektsmeldingValidererUtilTest {
 
     @Test
     void skal_avvise_duplikat_fom_dato() {
-        var refusjon = List.of(
-            new InntektsmeldingRequest.Refusjon(STARTDATO, DEFAULT_BELØP),
-            new InntektsmeldingRequest.Refusjon(STARTDATO, new BigDecimal("20000.00"))
+        var refusjon = new InntektsmeldingRequest.Refusjon(DEFAULT_BELØP, List.of(
+            new InntektsmeldingRequest.Refusjon.RefusjonEndring(BigDecimal.valueOf(20000), STARTDATO.plusDays(10)),
+            new InntektsmeldingRequest.Refusjon.RefusjonEndring(BigDecimal.valueOf(15000), STARTDATO.plusDays(10)))
         );
         var result = InntektsmeldingValidererUtil.validerRefusjon(refusjon, STARTDATO);
-        assertThat(result).hasValue(EksponertFeilmelding.LIK_FOM_REFUSJON);
+        assertThat(result).hasValue(EksponertFeilmelding.LIK_START_DATO_REFUSJONSENDRINGER);
+    }
+
+    @Test
+    void skal_avvise_endring_på_startdato() {
+        var refusjon = new InntektsmeldingRequest.Refusjon(DEFAULT_BELØP, List.of(
+            new InntektsmeldingRequest.Refusjon.RefusjonEndring(BigDecimal.valueOf(20000), STARTDATO),
+            new InntektsmeldingRequest.Refusjon.RefusjonEndring(BigDecimal.valueOf(15000), STARTDATO.plusDays(10)))
+        );
+        var result = InntektsmeldingValidererUtil.validerRefusjon(refusjon, STARTDATO);
+        assertThat(result).hasValue(EksponertFeilmelding.REFUSJON_ENDRING_LIK_STARTDATO);
     }
 
     @Test
     void skal_godkjenne_usorterte_sammenhengende_refusjoner() {
-        var refusjon = List.of(
-            new InntektsmeldingRequest.Refusjon(STARTDATO.plusDays(2), new BigDecimal("15000.00")),
-            new InntektsmeldingRequest.Refusjon(STARTDATO, DEFAULT_BELØP),
-            new InntektsmeldingRequest.Refusjon(STARTDATO.plusDays(1), new BigDecimal("20000.00"))
+        var refusjon = new InntektsmeldingRequest.Refusjon(DEFAULT_BELØP, List.of(
+            new InntektsmeldingRequest.Refusjon.RefusjonEndring(BigDecimal.valueOf(15000), STARTDATO.plusDays(20)),
+            new InntektsmeldingRequest.Refusjon.RefusjonEndring(BigDecimal.valueOf(20000), STARTDATO.plusDays(10)))
         );
         var result = InntektsmeldingValidererUtil.validerRefusjon(refusjon, STARTDATO);
         assertThat(result).isEmpty();
@@ -131,9 +133,9 @@ class InntektsmeldingValidererUtilTest {
 
     @Test
     void skal_godkjenne_usammenhengende_refusjonsperioder() {
-        var refusjon = List.of(
-            new InntektsmeldingRequest.Refusjon(STARTDATO, new BigDecimal("15000.00")),
-            new InntektsmeldingRequest.Refusjon(STARTDATO.plusDays(30), new BigDecimal("20000.00"))
+        var refusjon = new InntektsmeldingRequest.Refusjon(DEFAULT_BELØP, List.of(
+            new InntektsmeldingRequest.Refusjon.RefusjonEndring(BigDecimal.valueOf(15000), STARTDATO.plusDays(40)),
+            new InntektsmeldingRequest.Refusjon.RefusjonEndring(BigDecimal.valueOf(20000), STARTDATO.plusDays(10)))
         );
         var result = InntektsmeldingValidererUtil.validerRefusjon(refusjon, STARTDATO);
         assertThat(result).isEmpty();
@@ -207,9 +209,9 @@ class InntektsmeldingValidererUtilTest {
         assertThat(result).isEmpty();
     }
 
-    private InntektsmeldingRequest.BortfaltNaturalytelse lagNaturalytelse(LocalDate fom, LocalDate tom) {
-        return new InntektsmeldingRequest.BortfaltNaturalytelse(fom, tom,
-            InntektsmeldingRequest.BortfaltNaturalytelse.Naturalytelsetype.ELEKTRISK_KOMMUNIKASJON, DEFAULT_BELØP);
+    private InntektsmeldingRequest.Naturalytelse lagNaturalytelse(LocalDate fom, LocalDate tom) {
+        return new InntektsmeldingRequest.Naturalytelse(fom, tom,
+            InntektsmeldingRequest.Naturalytelse.Naturalytelsetype.ELEKTRISK_KOMMUNIKASJON, DEFAULT_BELØP);
     }
 
     // =====================================================================
@@ -231,8 +233,8 @@ class InntektsmeldingValidererUtilTest {
     @Test
     void skal_avvise_duplikate_unike_årsaker() {
         var årsaker = List.of(
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.NY_STILLING, STARTDATO.minusDays(5), null, null),
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.NY_STILLING, STARTDATO.minusDays(3), null, null)
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.NY_STILLING, STARTDATO.minusDays(5), null, null),
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.NY_STILLING, STARTDATO.minusDays(3), null, null)
         );
         var result = InntektsmeldingValidererUtil.validerEndringsårsaker(årsaker, STARTDATO);
         assertThat(result).hasValue(EksponertFeilmelding.DUPLIKATER_IKKE_TILATT);
@@ -242,8 +244,8 @@ class InntektsmeldingValidererUtilTest {
     void skal_godkjenne_duplikate_ikke_unike_årsaker() {
         // FERIE, PERMISJON, PERMITTERING, SYKEFRAVÆR er lov å ha flere av
         var årsaker = List.of(
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.FERIE, STARTDATO, STARTDATO.plusDays(5), null),
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.FERIE, STARTDATO.plusDays(10), STARTDATO.plusDays(15), null)
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.FERIE, STARTDATO, STARTDATO.plusDays(5), null),
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.FERIE, STARTDATO.plusDays(10), STARTDATO.plusDays(15), null)
         );
         var result = InntektsmeldingValidererUtil.validerEndringsårsaker(årsaker, STARTDATO);
         assertThat(result).isEmpty();
@@ -252,8 +254,8 @@ class InntektsmeldingValidererUtilTest {
     @Test
     void skal_godkjenne_duplikate_permisjon_årsaker() {
         var årsaker = List.of(
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.PERMISJON, STARTDATO, STARTDATO.plusDays(5), null),
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.PERMISJON, STARTDATO.plusDays(10), STARTDATO.plusDays(15), null)
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.PERMISJON, STARTDATO, STARTDATO.plusDays(5), null),
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.PERMISJON, STARTDATO.plusDays(10), STARTDATO.plusDays(15), null)
         );
         var result = InntektsmeldingValidererUtil.validerEndringsårsaker(årsaker, STARTDATO);
         assertThat(result).isEmpty();
@@ -262,8 +264,8 @@ class InntektsmeldingValidererUtilTest {
     @Test
     void skal_avvise_duplikat_bonus() {
         var årsaker = List.of(
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.BONUS, null, null, null),
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.BONUS, null, null, null)
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.BONUS, null, null, null),
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.BONUS, null, null, null)
         );
         var result = InntektsmeldingValidererUtil.validerEndringsårsaker(årsaker, STARTDATO);
         assertThat(result).hasValue(EksponertFeilmelding.DUPLIKATER_IKKE_TILATT);
@@ -272,7 +274,7 @@ class InntektsmeldingValidererUtilTest {
     @Test
     void skal_avvise_tariffendring_uten_fom() {
         var årsaker = List.of(
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.TARIFFENDRING, null, null, STARTDATO)
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.TARIFFENDRING, null, null, STARTDATO)
         );
         var result = InntektsmeldingValidererUtil.validerEndringsårsaker(årsaker, STARTDATO);
         assertThat(result).hasValue(EksponertFeilmelding.KREVER_FRA_OG_BLE_KJENT_DATO);
@@ -281,7 +283,7 @@ class InntektsmeldingValidererUtilTest {
     @Test
     void skal_avvise_tariffendring_uten_ble_kjent_fom() {
         var årsaker = List.of(
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.TARIFFENDRING, STARTDATO, null, null)
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.TARIFFENDRING, STARTDATO, null, null)
         );
         var result = InntektsmeldingValidererUtil.validerEndringsårsaker(årsaker, STARTDATO);
         assertThat(result).hasValue(EksponertFeilmelding.KREVER_FRA_OG_BLE_KJENT_DATO);
@@ -290,7 +292,7 @@ class InntektsmeldingValidererUtilTest {
     @Test
     void skal_avvise_tariffendring_ble_kjent_før_fom() {
         var årsaker = List.of(
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.TARIFFENDRING, STARTDATO, null, STARTDATO.minusDays(1))
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.TARIFFENDRING, STARTDATO, null, STARTDATO.minusDays(1))
         );
         var result = InntektsmeldingValidererUtil.validerEndringsårsaker(årsaker, STARTDATO);
         assertThat(result).hasValue(EksponertFeilmelding.KREVER_FRA_OG_BLE_KJENT_DATO);
@@ -299,7 +301,7 @@ class InntektsmeldingValidererUtilTest {
     @Test
     void skal_godkjenne_gyldig_tariffendring() {
         var årsaker = List.of(
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.TARIFFENDRING, STARTDATO, null, STARTDATO.plusDays(5))
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.TARIFFENDRING, STARTDATO, null, STARTDATO.plusDays(5))
         );
         var result = InntektsmeldingValidererUtil.validerEndringsårsaker(årsaker, STARTDATO);
         assertThat(result).isEmpty();
@@ -308,7 +310,7 @@ class InntektsmeldingValidererUtilTest {
     @Test
     void skal_godkjenne_tariffendring_ble_kjent_lik_fom() {
         var årsaker = List.of(
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.TARIFFENDRING, STARTDATO, null, STARTDATO)
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.TARIFFENDRING, STARTDATO, null, STARTDATO)
         );
         var result = InntektsmeldingValidererUtil.validerEndringsårsaker(årsaker, STARTDATO);
         assertThat(result).isEmpty();
@@ -318,7 +320,7 @@ class InntektsmeldingValidererUtilTest {
     @Test
     void skal_avvise_ny_stilling_uten_fom() {
         var årsaker = List.of(
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.NY_STILLING, null, null, null)
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.NY_STILLING, null, null, null)
         );
         var result = InntektsmeldingValidererUtil.validerEndringsårsaker(årsaker, STARTDATO);
         assertThat(result).hasValue(EksponertFeilmelding.AARSAK_KREVER_FRA_DATO);
@@ -327,7 +329,7 @@ class InntektsmeldingValidererUtilTest {
     @Test
     void skal_avvise_ny_stillingsprosent_uten_fom() {
         var årsaker = List.of(
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.NY_STILLINGSPROSENT, null, null, null)
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.NY_STILLINGSPROSENT, null, null, null)
         );
         var result = InntektsmeldingValidererUtil.validerEndringsårsaker(årsaker, STARTDATO);
         assertThat(result).hasValue(EksponertFeilmelding.AARSAK_KREVER_FRA_DATO);
@@ -336,7 +338,7 @@ class InntektsmeldingValidererUtilTest {
     @Test
     void skal_avvise_varig_lønnsendring_uten_fom() {
         var årsaker = List.of(
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.VARIG_LØNNSENDRING, null, null, null)
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.VARIG_LØNNSENDRING, null, null, null)
         );
         var result = InntektsmeldingValidererUtil.validerEndringsårsaker(årsaker, STARTDATO);
         assertThat(result).hasValue(EksponertFeilmelding.AARSAK_KREVER_FRA_DATO);
@@ -345,7 +347,7 @@ class InntektsmeldingValidererUtilTest {
     @Test
     void skal_godkjenne_ny_stilling_med_fom() {
         var årsaker = List.of(
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.NY_STILLING, STARTDATO.minusDays(10), null, null)
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.NY_STILLING, STARTDATO.minusDays(10), null, null)
         );
         var result = InntektsmeldingValidererUtil.validerEndringsårsaker(årsaker, STARTDATO);
         assertThat(result).isEmpty();
@@ -354,7 +356,7 @@ class InntektsmeldingValidererUtilTest {
     @Test
     void skal_avvise_varig_lønnsendring_fom_etter_startdato() {
         var årsaker = List.of(
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.VARIG_LØNNSENDRING, STARTDATO.plusDays(1), null, null)
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.VARIG_LØNNSENDRING, STARTDATO.plusDays(1), null, null)
         );
         var result = InntektsmeldingValidererUtil.validerEndringsårsaker(årsaker, STARTDATO);
         assertThat(result).hasValue(EksponertFeilmelding.FRA_DATO_FOER_STARTDATO);
@@ -363,7 +365,7 @@ class InntektsmeldingValidererUtilTest {
     @Test
     void skal_godkjenne_varig_lønnsendring_fom_lik_startdato() {
         var årsaker = List.of(
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.VARIG_LØNNSENDRING, STARTDATO, null, null)
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.VARIG_LØNNSENDRING, STARTDATO, null, null)
         );
         var result = InntektsmeldingValidererUtil.validerEndringsårsaker(årsaker, STARTDATO);
         assertThat(result).isEmpty();
@@ -372,7 +374,7 @@ class InntektsmeldingValidererUtilTest {
     @Test
     void skal_godkjenne_varig_lønnsendring_fom_før_startdato() {
         var årsaker = List.of(
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.VARIG_LØNNSENDRING, STARTDATO.minusDays(10), null, null)
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.VARIG_LØNNSENDRING, STARTDATO.minusDays(10), null, null)
         );
         var result = InntektsmeldingValidererUtil.validerEndringsårsaker(årsaker, STARTDATO);
         assertThat(result).isEmpty();
@@ -381,7 +383,7 @@ class InntektsmeldingValidererUtilTest {
     @Test
     void skal_avvise_ferie_uten_fom() {
         var årsaker = List.of(
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.FERIE, null, STARTDATO.plusDays(5), null)
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.FERIE, null, STARTDATO.plusDays(5), null)
         );
         var result = InntektsmeldingValidererUtil.validerEndringsårsaker(årsaker, STARTDATO);
         assertThat(result).hasValue(EksponertFeilmelding.AARSAK_KREVER_FRA_OG_TIL_DATO);
@@ -390,7 +392,7 @@ class InntektsmeldingValidererUtilTest {
     @Test
     void skal_avvise_ferie_uten_tom() {
         var årsaker = List.of(
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.FERIE, STARTDATO, null, null)
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.FERIE, STARTDATO, null, null)
         );
         var result = InntektsmeldingValidererUtil.validerEndringsårsaker(årsaker, STARTDATO);
         assertThat(result).hasValue(EksponertFeilmelding.AARSAK_KREVER_FRA_OG_TIL_DATO);
@@ -399,7 +401,7 @@ class InntektsmeldingValidererUtilTest {
     @Test
     void skal_avvise_permittering_uten_datoer() {
         var årsaker = List.of(
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.PERMITTERING, null, null, null)
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.PERMITTERING, null, null, null)
         );
         var result = InntektsmeldingValidererUtil.validerEndringsårsaker(årsaker, STARTDATO);
         assertThat(result).hasValue(EksponertFeilmelding.AARSAK_KREVER_FRA_OG_TIL_DATO);
@@ -408,7 +410,7 @@ class InntektsmeldingValidererUtilTest {
     @Test
     void skal_avvise_sykefravær_uten_tom() {
         var årsaker = List.of(
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.SYKEFRAVÆR, STARTDATO, null, null)
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.SYKEFRAVÆR, STARTDATO, null, null)
         );
         var result = InntektsmeldingValidererUtil.validerEndringsårsaker(årsaker, STARTDATO);
         assertThat(result).hasValue(EksponertFeilmelding.AARSAK_KREVER_FRA_OG_TIL_DATO);
@@ -417,7 +419,7 @@ class InntektsmeldingValidererUtilTest {
     @Test
     void skal_godkjenne_ferie_med_fom_og_tom() {
         var årsaker = List.of(
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.FERIE, STARTDATO, STARTDATO.plusDays(5), null)
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.FERIE, STARTDATO, STARTDATO.plusDays(5), null)
         );
         var result = InntektsmeldingValidererUtil.validerEndringsårsaker(årsaker, STARTDATO);
         assertThat(result).isEmpty();
@@ -426,7 +428,7 @@ class InntektsmeldingValidererUtilTest {
     @Test
     void skal_godkjenne_permisjon_med_fom_og_tom() {
         var årsaker = List.of(
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.PERMISJON, STARTDATO, STARTDATO.plusDays(10), null)
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.PERMISJON, STARTDATO, STARTDATO.plusDays(10), null)
         );
         var result = InntektsmeldingValidererUtil.validerEndringsårsaker(årsaker, STARTDATO);
         assertThat(result).isEmpty();
@@ -435,7 +437,7 @@ class InntektsmeldingValidererUtilTest {
     @Test
     void skal_avvise_fom_etter_tom_for_endringsårsaker() {
         var årsaker = List.of(
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.FERIE, STARTDATO.plusDays(10), STARTDATO, null)
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.FERIE, STARTDATO.plusDays(10), STARTDATO, null)
         );
         var result = InntektsmeldingValidererUtil.validerEndringsårsaker(årsaker, STARTDATO);
         assertThat(result).hasValue(EksponertFeilmelding.FRA_DATO_ETTER_TOM);
@@ -444,7 +446,7 @@ class InntektsmeldingValidererUtilTest {
     @Test
     void skal_godkjenne_fom_lik_tom() {
         var årsaker = List.of(
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.FERIE, STARTDATO, STARTDATO, null)
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.FERIE, STARTDATO, STARTDATO, null)
         );
         var result = InntektsmeldingValidererUtil.validerEndringsårsaker(årsaker, STARTDATO);
         assertThat(result).isEmpty();
@@ -453,8 +455,8 @@ class InntektsmeldingValidererUtilTest {
     @Test
     void skal_avvise_overlappende_perioder_for_endringsårsaker() {
         var årsaker = List.of(
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.FERIE, STARTDATO, STARTDATO.plusDays(10), null),
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.PERMISJON, STARTDATO.plusDays(5), STARTDATO.plusDays(15), null)
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.FERIE, STARTDATO, STARTDATO.plusDays(10), null),
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.PERMISJON, STARTDATO.plusDays(5), STARTDATO.plusDays(15), null)
         );
         var result = InntektsmeldingValidererUtil.validerEndringsårsaker(årsaker, STARTDATO);
         assertThat(result).hasValue(EksponertFeilmelding.OVERLAPP_I_PERIODER);
@@ -463,8 +465,8 @@ class InntektsmeldingValidererUtilTest {
     @Test
     void skal_godkjenne_ikke_overlappende_perioder_for_endringsårsaker() {
         var årsaker = List.of(
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.FERIE, STARTDATO, STARTDATO.plusDays(5), null),
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.PERMISJON, STARTDATO.plusDays(7), STARTDATO.plusDays(15), null)
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.FERIE, STARTDATO, STARTDATO.plusDays(5), null),
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.PERMISJON, STARTDATO.plusDays(7), STARTDATO.plusDays(15), null)
         );
         var result = InntektsmeldingValidererUtil.validerEndringsårsaker(årsaker, STARTDATO);
         assertThat(result).isEmpty();
@@ -473,7 +475,7 @@ class InntektsmeldingValidererUtilTest {
     @Test
     void skal_godkjenne_bonus_uten_datoer() {
         var årsaker = List.of(
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.BONUS, null, null, null)
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.BONUS, null, null, null)
         );
         var result = InntektsmeldingValidererUtil.validerEndringsårsaker(årsaker, STARTDATO);
         assertThat(result).isEmpty();
@@ -482,7 +484,7 @@ class InntektsmeldingValidererUtilTest {
     @Test
     void skal_godkjenne_nyansatt_uten_datoer() {
         var årsaker = List.of(
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.NYANSATT, null, null, null)
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.NYANSATT, null, null, null)
         );
         var result = InntektsmeldingValidererUtil.validerEndringsårsaker(årsaker, STARTDATO);
         assertThat(result).isEmpty();
@@ -491,7 +493,7 @@ class InntektsmeldingValidererUtilTest {
     @Test
     void skal_godkjenne_ferietrekk_uten_datoer() {
         var årsaker = List.of(
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.FERIETREKK_ELLER_UTBETALING_AV_FERIEPENGER, null, null, null)
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.FERIETREKK_ELLER_UTBETALING_AV_FERIEPENGER, null, null, null)
         );
         var result = InntektsmeldingValidererUtil.validerEndringsårsaker(årsaker, STARTDATO);
         assertThat(result).isEmpty();
@@ -504,7 +506,7 @@ class InntektsmeldingValidererUtilTest {
     @Test
     void skal_godkjenne_mangelfull_rapportering_uten_datoer() {
         var årsaker = List.of(
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.MANGELFULL_RAPPORTERING_AORDNING, null, null, null)
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.MANGELFULL_RAPPORTERING_AORDNING, null, null, null)
         );
         var result = InntektsmeldingValidererUtil.validerEndringsårsaker(årsaker, STARTDATO);
         assertThat(result).isEmpty();
@@ -513,7 +515,7 @@ class InntektsmeldingValidererUtilTest {
     @Test
     void skal_godkjenne_inntekt_ikke_rapportert_uten_datoer() {
         var årsaker = List.of(
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.INNTEKT_IKKE_RAPPORTERT_ENDA_AORDNING, null, null, null)
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.INNTEKT_IKKE_RAPPORTERT_ENDA_AORDNING, null, null, null)
         );
         var result = InntektsmeldingValidererUtil.validerEndringsårsaker(årsaker, STARTDATO);
         assertThat(result).isEmpty();
@@ -522,9 +524,9 @@ class InntektsmeldingValidererUtilTest {
     @Test
     void skal_godkjenne_flere_ulike_årsaker_med_gyldige_datoer() {
         var årsaker = List.of(
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.NY_STILLING, STARTDATO.minusDays(5), null, null),
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.BONUS, null, null, null),
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.FERIE, STARTDATO, STARTDATO.plusDays(5), null)
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.NY_STILLING, STARTDATO.minusDays(5), null, null),
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.BONUS, null, null, null),
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.FERIE, STARTDATO, STARTDATO.plusDays(5), null)
         );
         var result = InntektsmeldingValidererUtil.validerEndringsårsaker(årsaker, STARTDATO);
         assertThat(result).isEmpty();
@@ -533,18 +535,18 @@ class InntektsmeldingValidererUtilTest {
     @Test
     void skal_ikke_godkjenne_flere_ulike_årsaker_hvor_en_har_ugyldig_dato() {
         var årsaker = List.of(
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.NY_STILLING, STARTDATO.minusDays(5), null, null),
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.BONUS, null, null, null),
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.FERIE, STARTDATO.minusDays(5), STARTDATO.plusDays(5), null),
-            lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak.FERIE, STARTDATO.minusDays(4), STARTDATO.plusDays(5), null)
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.NY_STILLING, STARTDATO.minusDays(5), null, null),
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.BONUS, null, null, null),
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.FERIE, STARTDATO.minusDays(5), STARTDATO.plusDays(5), null),
+            lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.FERIE, STARTDATO.minusDays(4), STARTDATO.plusDays(5), null)
         );
         var result = InntektsmeldingValidererUtil.validerEndringsårsaker(årsaker, STARTDATO);
         assertThat(result).hasValue(EksponertFeilmelding.OVERLAPP_I_PERIODER);
     }
 
-    private InntektsmeldingRequest.Endringsårsaker lagEndringsårsak(InntektsmeldingRequest.Endringsårsaker.Endringsårsak årsak,
+    private InntektsmeldingRequest.InntektInfo.Endringsårsak lagEndringsårsak(InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType årsak,
                                                                     LocalDate fom, LocalDate tom, LocalDate bleKjentFom) {
-        return new InntektsmeldingRequest.Endringsårsaker(årsak, fom, tom, bleKjentFom);
+        return new InntektsmeldingRequest.InntektInfo.Endringsårsak(årsak, fom, tom, bleKjentFom);
     }
 
     @Test
@@ -555,21 +557,13 @@ class InntektsmeldingValidererUtilTest {
 
 
     @Test
-    void skal_returnere_feil_fra_refusjon_validering() {
-        var request = lagRequest(YtelseType.FORELDREPENGER,
-            List.of(new InntektsmeldingRequest.Refusjon(STARTDATO.plusDays(5), DEFAULT_BELØP)),
-            Collections.emptyList(), Collections.emptyList());
-        var result = InntektsmeldingValidererUtil.validerInntektsmelding(request, lagDefaultForespørsel());
-        assertThat(result).hasValue(EksponertFeilmelding.REFUSJON_FOM_LIK_STARTDATO);
-    }
-
-    @Test
     void skal_returnere_feil_fra_naturalytelse_validering() {
         var request = lagRequest(YtelseType.FORELDREPENGER,
-            List.of(new InntektsmeldingRequest.Refusjon(STARTDATO, DEFAULT_BELØP)),
-            List.of(new InntektsmeldingRequest.BortfaltNaturalytelse(STARTDATO.plusDays(10), STARTDATO,
-                InntektsmeldingRequest.BortfaltNaturalytelse.Naturalytelsetype.BIL, DEFAULT_BELØP)),
-            Collections.emptyList());
+            new InntektsmeldingRequest.Refusjon(DEFAULT_BELØP, List.of()),
+            List.of(new InntektsmeldingRequest.Naturalytelse(STARTDATO.plusDays(10), STARTDATO,
+                InntektsmeldingRequest.Naturalytelse.Naturalytelsetype.BIL, DEFAULT_BELØP)),
+            new InntektsmeldingRequest.InntektInfo(DEFAULT_BELØP, List.of()));
+
         var result = InntektsmeldingValidererUtil.validerInntektsmelding(request, lagDefaultForespørsel());
         assertThat(result).hasValue(EksponertFeilmelding.FRA_DATO_ETTER_TOM);
     }
@@ -577,30 +571,30 @@ class InntektsmeldingValidererUtilTest {
     @Test
     void skal_returnere_feil_fra_endringsårsak_validering() {
         var request = lagRequest(YtelseType.FORELDREPENGER,
-            List.of(new InntektsmeldingRequest.Refusjon(STARTDATO, DEFAULT_BELØP)),
-            Collections.emptyList(),
-            List.of(new InntektsmeldingRequest.Endringsårsaker(
-                InntektsmeldingRequest.Endringsårsaker.Endringsårsak.NY_STILLING, null, null, null)));
+            new InntektsmeldingRequest.Refusjon(DEFAULT_BELØP, List.of()),
+            List.of(), new InntektsmeldingRequest.InntektInfo(DEFAULT_BELØP, List.of(new InntektsmeldingRequest.InntektInfo.Endringsårsak(
+                InntektsmeldingRequest.InntektInfo.Endringsårsak.EndringsårsakType.NY_STILLING, null, null, null))));
+
         var result = InntektsmeldingValidererUtil.validerInntektsmelding(request, lagDefaultForespørsel());
         assertThat(result).hasValue(EksponertFeilmelding.AARSAK_KREVER_FRA_DATO);
     }
 
     // --- Hjelpemetoder for testdata ---
     private static InntektsmeldingRequest lagRequest(YtelseType ytelse,
-                                                     List<InntektsmeldingRequest.Refusjon> refusjon,
-                                                     List<InntektsmeldingRequest.BortfaltNaturalytelse> naturalytelser,
-                                                     List<InntektsmeldingRequest.Endringsårsaker> endringsårsaker) {
+                                                     InntektsmeldingRequest.Refusjon refusjon,
+                                                     List<InntektsmeldingRequest.Naturalytelse> naturalytelser,
+                                                     InntektsmeldingRequest.InntektInfo inntektInfo) {
         return new InntektsmeldingRequest(
-            DEFAULT_UUID, DEFAULT_FNR, InntektsmeldingValidererUtilTest.STARTDATO, ytelse,
-            new InntektsmeldingRequest.Kontaktperson("Test Person", "99887766"),
-            DEFAULT_BELØP, refusjon, naturalytelser, endringsårsaker,
-            new InntektsmeldingRequest.AvsenderSystem("TestSystem", "1.0"));
+            DEFAULT_UUID, DEFAULT_FNR, InntektsmeldingValidererUtilTest.STARTDATO, ytelse, inntektInfo,
+            refusjon, naturalytelser, "Test Person", "99887766",
+            new InntektsmeldingRequest.Avsender("TestSystem", "1.0"));
     }
 
     private static InntektsmeldingRequest lagDefaultRequest() {
         return lagRequest(YtelseType.FORELDREPENGER,
-            List.of(new InntektsmeldingRequest.Refusjon(STARTDATO, DEFAULT_BELØP)),
-            Collections.emptyList(), Collections.emptyList());
+            new InntektsmeldingRequest.Refusjon(DEFAULT_BELØP, List.of()),
+            Collections.emptyList(),
+            new InntektsmeldingRequest.InntektInfo(DEFAULT_BELØP, List.of()));
     }
 
     private static Forespørsel lagForespørsel(ForespørselStatus status, LocalDate førsteUttaksdato, YtelseType ytelseType) {
